# ComfyUI-JoyCaption

./: CaptionTools.py  JC.py  README.md  __init__.py  jc_data.json  pyproject.toml  requirements.txt  update.md
example_workflows/: Joycaption_node.json  batch_image_text_output.json
locales/en/: main.json  nodeDefs.json
locales/fr/: main.json  nodeDefs.json
locales/ja/: main.json  nodeDefs.json
locales/ko/: main.json  nodeDefs.json
locales/ru/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
