[project]
name = "ComfyUI-JoyCaption"
description = "Custom ComfyUI node for powerful Joy Caption LLM captioning."
version = "0.0.1"
license = {file = "LICENSE"}
dependencies = [""]

[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-JoyCaption"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-JoyCaption"
Icon = ""
